Arreglo del disclaimer

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                                 <img src="https://assets.website-files.com/64463f5f0937fac90063c9a3/644805aee2568633cd4a077a_check-circle-duotone.svg"
                                                     loading="lazy" alt="Check Icon" class="icon-1x1-small" />
                                                 <div class="highlight-content">
-                                                    <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo</p>
+                                                    <p class="text-size-medium text-uppercase">Fiesta Rompe Hielo *</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -1254,16 +1254,38 @@
                             </div>
                         </div>
                         <div class="footer-bottom-wrapper">
+                            <div class="important">
+                                * El costo del boleto no cubre el acceso al evento rompehielos.
+                            </div>
                             <div class="disclaimer">
-                                Gracias por visitar nuestra página web y por su interés en nuestros eventos. Nos gustaría informarle que todas las compras de boletos son finales. Una vez que se ha completado la compra, no podemos ofrecer reembolsos, cambios ni cancelaciones bajo ninguna circunstancia, lo cual incluye cambios de planes personales, conflictos de horario, problemas de transporte y condiciones meteorológicas.
+                                Gracias por visitar nuestra página web y por su interés en nuestros eventos. Nos gustaría informarle que todas las compras de boletos son finales. Una vez que se ha completado la compra, no podemos ofrecer reembolsos, cambios ni cancelaciones bajo ninguna circunstancia, lo cual incluye cambios de planes personales, conflictos de horario, problemas de transporte y condiciones meteorológicas. En el caso poco probable de que un evento sea cancelado o reprogramado por parte de los organizadores, se le notificará a la mayor brevedad posible y se proporcionará información sobre las opciones disponibles. 
                             </div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                                 los derechos reservados</div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                                Diseñado por:
+                                Diseñado por: <a href="#"><img src="./assets/Transparent Logo.png" alt="Logo Vexa" class="vexa-logo"></a>
                             </div>
 
+                            <style>
 
+                                .important{
+                                    text-align: center;
+                                    max-width: 1000px;
+                                    margin-left: auto;
+                                    margin-right: auto;
+                                    margin-bottom: 20px;
+                                }
+                                
+                                .disclaimer{
+                                    text-align: center;
+                                    max-width: 1000px;
+                                    margin-left: auto;
+                                    margin-right: auto;
+                                }
+
+
+                                
+                            </style>
                         </div>
                     </div>
                 </div>
