--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,29 @@
                                 }
 
 
+                                .footer-credit {
+                                    text-align: center;
+                                    max-width: 500px;
+                                    margin-left: auto;
+                                    margin-right: auto;
+                                    margin-top: 20px;
+                                }
                                 
+                                .vexa-logo{
+                                    width: 20%;
+                                }
+
+                                .footer-bottom-wrapper {
+                                    grid-column-gap: 1.5rem;
+                                    grid-row-gap: 1.5rem;
+                                    grid-template-rows: auto;
+                                    grid-template-columns: max-content;
+                                    grid-auto-columns: max-content;
+                                    grid-auto-flow: column;
+                                    justify-content: center;
+                                    align-items: center;
+                                }
+                                    
                             </style>
                         </div>
                     </div>
