--- a/index.html
+++ b/index.html
@@ -1131,11 +1131,7 @@
                                         </div>
                                         <div class="faq-answer">
                                             <div class="margin-bottom margin-small answer">
-                                                <p>Entendemos que pueden surgir imprevistos. Te pedimos que nos informes
-                                                    lo antes posible si no puedes asistir. Sin embargo, ten en cuenta
-                                                    que las políticas de reembolso pueden variar y es mejor consultar
-                                                    directamente con los organizadores del evento para conocer los
-                                                    detalles específicos.</p>
+                                                <p>Entendemos que pueden surgir imprevistos. Te pedimos que nos informes lo antes posible si no puedes asistir. Sin embargo, ten en cuenta que todas las compras de boletos son finales y no ofrecemos reembolsos, cambios ni cancelaciones bajo ninguna circunstancia.</p>
                                             </div>
                                         </div>
                                     </div>
