--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="footer-bottom-wrapper">
+                        <div class="footer-bottom-wrapper2">
                             <div class="important">
                                 * El costo del boleto no cubre el acceso al evento rompehielos.
                             </div>
@@ -1292,7 +1292,7 @@
                                     width: 20%;
                                 }
 
-                                .footer-bottom-wrapper {
+                                .footer-bottom-wrapper2 {
                                     grid-column-gap: 1.5rem;
                                     grid-row-gap: 1.5rem;
                                     grid-template-rows: auto;
