Cambios al diseñado por

--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
                                 los derechos reservados</div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                                Diseñado por: <a href="#"><img src="./assets/Transparent Logo.png" alt="Logo Vexa" class="vexa-logo"></a>
+                                Diseñado por: <a href="#"><img src="./assets/Transparent Logo.png" alt="Logo Vexa" class="vexa-logo2"></a>
                             </div>
 
                             <style>
@@ -1288,7 +1288,7 @@
                                     margin-top: 20px;
                                 }
                                 
-                                .vexa-logo{
+                                .vexa-logo2{
                                     width: 20%;
                                 }
 
@@ -1303,6 +1303,13 @@
                                     align-items: center;
                                 }
                                     
+                                .text-size-small {
+                                    font-size: 0.875rem;
+                                    text-align: center;
+                                    margin-left: auto;
+                                    max-width: 500px;
+                                    margin-right: auto;
+                                }
                             </style>
                         </div>
                     </div>
