Arreglo fotos organizadores

--- a/index.html
+++ b/index.html
@@ -977,10 +977,15 @@
                             </div>
 
                             <div class="organizadores">
-                                <div class="organizadoresImg">
+                                <div class="organizadoresImg2">
                                     <img src="assets/logos-removebg-preview.png" alt="logo">
                                 </div>
-
+                                <style>
+                                    .organizadoresImg2 {
+                                        width: 100%;
+                                        align-items: center;
+                                    }
+                                </style>
                             </div>
 
 
