Cambios en el footer

--- a/index.html
+++ b/index.html
@@ -977,12 +977,18 @@
                             </div>
 
                             <div class="organizadores">
-                                <div class="organizadoresImg2">
+                                <div class="organizadoresImg">
                                     <img src="assets/logos-removebg-preview.png" alt="logo">
                                 </div>
                                 <style>
-                                    .organizadoresImg2 {
+                                    .organizadoresImg {
                                         width: 100%;
+                                        align-items: center;
+                                        justify-content: center;
+                                    }
+
+                                    .organizadores {
+                                        justify-content: center;
                                         align-items: center;
                                     }
                                 </style>
@@ -1316,6 +1322,14 @@
                                     grid-auto-flow: column;
                                     justify-content: center;
                                     align-items: center;
+                                }
+
+                                .text-size-small {
+                                    font-size: 0.875rem;
+                                    text-align: center;
+                                    margin-left: auto;
+                                    max-width: 500px;
+                                    margin-right: auto;
                                 }
                             </style>
                         </div>
