--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
                                         /* Asegura que los iconos estén por encima del pseudo-elemento */
                                     }
 
-                                    .organizadoresImg::after {
+                                    .organizadoresImg2::after {
                                         content: '';
                                         position: absolute;
                                         top: 0;
@@ -1110,11 +1110,11 @@
                                         /* Asegura que el pseudo-elemento esté por detrás de los iconos */
                                     }
 
-                                    .organizadoresImg:hover::after {
+                                    .organizadoresImg2:hover::after {
                                         opacity: 1;
                                     }
 
-                                    .organizadoresImg:hover .social-icons {
+                                    .organizadoresImg2:hover .social-icons {
                                         opacity: 1;
                                     }
 
