--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Manuel Lujan</p>
+                                            <p style="font-weight: bold;">Conferencista: Dr. Manuel Lujan</p>
                                         </div>
                                     </div>
 
@@ -717,7 +717,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Heber Roberto León Salazar</p>
+                                            <p style="font-weight: bold;">Conferencista: Dr. Heber Roberto León Salazar</p>
                                             <p>La unión de la estética rosa con la estética blanca es un factor
                                                 primordial para la conformación del segmento anterior. Aprende como se
                                                 complementan.</p>
@@ -778,10 +778,10 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
+                                            <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                             <p>Hoy en día las exigencias estéticas del paciente presentan estándares
                                                 altos, te ayudará a comprender cómo emular lo natural y aumentar la
                                                 belleza en tus restauraciones de segmento anterior.</p>
-                                            <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                         </div>
                                     </div>
 
@@ -1056,74 +1056,85 @@
 
                             <div class="organizadores2">
                                 <div class="organizadoresImg2">
-                                    <img src="assets/logos-removebg-preview.png" alt="logo">
+                                    <img src="assets/1.-LOGO GAUX.png" alt="logo">
                                     <div class="social-icons">
-                                        <a href="https://www.facebook.com/dentalidcuu/" target="_blank"><img
-                                                src="assets/facebook-white.png" alt="Facebook"></a>
-                                        <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
-                                            target="_blank"><img src="assets/instagram-white.png" alt="Instagram"></a>
+                                        <a href="https://www.instagram.com/gutierrezgaux/?hl=es-la" target="_blank"><img src="assets/instagram-white.png" alt="Instagram"></a>
                                     </div>
                                 </div>
+                                <div class="organizadoresImg2">
+                                    <img src="assets/zeyco_logo.png" alt="logo">
+                                    <div class="social-icons">
+                                       </div>
+                                </div>
+                                <div class="organizadoresImg2">
+                                    <img src="assets/Dentalid LOGO.png" alt="logo">
+                                    <div class="social-icons">
+                                        <a href="https://www.facebook.com/dentalidcuu/" target="_blank"><img src="assets/facebook-white.png" alt="Facebook"></a>
+                                        <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la" target="_blank"><img src="assets/instagram-white.png" alt="Instagram"></a>
+                                    </div>
+                                </div>
+                            </div>
+                                
                                 <style>
-                                    .organizadoresImg2 {
-                                        width: 100%;
-                                        position: relative;
-                                        display: inline-block;
-                                    }
+.organizadores2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+}
 
-                                    .organizadoresImg2 img {
-                                        display: block;
-                                        width: 100%;
-                                        /* Ajusta esto según sea necesario */
-                                        height: auto;
-                                        /* Ajusta esto según sea necesario */
-                                    }
+.organizadoresImg2 {
+    position: relative;
+    text-align: center;
+}
 
-                                    .organizadoresImg2 .social-icons {
-                                        position: absolute;
-                                        left: 50%;
-                                        top: 50%;
-                                        transform: translate(-50%, -50%);
-                                        display: flex;
-                                        justify-content: center;
-                                        align-items: center;
-                                        opacity: 0;
-                                        transition: opacity 0.3s;
-                                        z-index: 1;
-                                        /* Asegura que los iconos estén por encima del pseudo-elemento */
-                                    }
+.organizadoresImg2 img {
+    width: 100%;
+    max-width: 150px; /* Ajusta el tamaño de los logos según sea necesario */
+    transition: opacity 0.3s ease;
+}
 
-                                    .organizadoresImg2::after {
-                                        content: '';
-                                        position: absolute;
-                                        top: 0;
-                                        left: 0;
-                                        width: 100%;
-                                        height: 100%;
-                                        background-color: rgba(0, 0, 0, 0.5);
-                                        /* Color negro con 50% de opacidad */
-                                        opacity: 0;
-                                        transition: opacity 0.3s;
-                                        pointer-events: none;
-                                        /* Asegura que el pseudo-elemento no interfiera con los iconos */
-                                        z-index: 0;
-                                        /* Asegura que el pseudo-elemento esté por detrás de los iconos */
-                                    }
+.organizadoresImg2::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 1;
+}
 
-                                    .organizadoresImg2:hover::after {
-                                        opacity: 1;
-                                    }
+.organizadoresImg2:hover::after {
+    opacity: 1;
+}
 
-                                    .organizadoresImg2:hover .social-icons {
-                                        opacity: 1;
-                                    }
+.social-icons {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    flex-direction: row;
+}
 
-                                    .social-icons a img {
-                                        width: 50%;
-                                        /* Ajusta el tamaño del icono según tus necesidades */
-                                        margin: 0 50px;
-                                        /* Espacio entre los iconos */
-                                    }
+.organizadoresImg2:hover .social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.social-icons a {
+    margin: 0 10px; /* Ajusta el margen entre los iconos según sea necesario */
+}
+
+.social-icons img {
+    width: 30px; /* Ajusta el tamaño de los iconos de redes sociales según sea necesario */
+}
+
                                 </style>
                             </div>
 
