Bold en los titulos conferencistas

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p style="font-weight: bold;">Conferencista: Dr. Manuel Lujan</p>
+                                            <p class="conferencista-titulo"">Conferencista: Dr. Manuel Lujan</p>
                                         </div>
                                     </div>
 
@@ -861,7 +861,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p style="font-weight: bold;">Conferencista: Dr. Heber Roberto León Salazar</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Heber Roberto León Salazar</p>
                                             <p>La unión de la estética rosa con la estética blanca es un factor
                                                 primordial para la conformación del segmento anterior. Aprende como se
                                                 complementan.</p>
@@ -892,7 +892,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Leonardo Vogel</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Leonardo Vogel</p>
                                             <p>La comunicación con tu laboratorio es la base de las restauraciones
                                                 biomimeticas, aprender a transmitir la mayor información a tu
                                                 laboratorio te dará el éxito en tu consulta diaria.</p>
@@ -922,7 +922,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                             <p>Hoy en día las exigencias estéticas del paciente presentan estándares
                                                 altos, te ayudará a comprender cómo emular lo natural y aumentar la
                                                 belleza en tus restauraciones de segmento anterior.</p>
@@ -938,11 +938,9 @@
                                         <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
                                             class="agenda-content2">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Fiesta Rompe Hielos</h3>
+                                                <h3>Fiesta Rompe Hielos *</h3>
                                             </div>
-                                            <p class="">Fiesta Rompe Hielos no esta incluido en el boleto y no se
-                                                proporcionara
-                                                comida</p>
+                                            <p class=""></p>
                                         </div>
                                     </div>
                                     <h1 class="text-center text-md-start">Día 2</h1>
@@ -958,7 +956,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Fermin Ocañas</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Fermin Ocañas</p>
                                         </div>
                                     </div>
                                     <div data-w-id="092b5cf7-288f-355b-4821-e2dbff1fb15c" class="agenda-item">
@@ -985,7 +983,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Cristian Reyna</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Cristian Reyna</p>
                                             <p>Los valores agregados en tu consulta aumentan la fidelidad de tus
                                                 pacientes y mejoran tus ingresos, aprende del mejor acerca de estos
                                                 temas.</p>
@@ -1014,7 +1012,7 @@
                                             <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Oscar Vizcarra</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Oscar Vizcarra</p>
                                             <p>Conocerás las herramientas necesarias del flujo digital y la integración
                                                 del mismo en la odontología del día a día, ayudándote a seleccionar
                                                 aquellas herramientas que te serán de mejor provecho y con una baja
@@ -1045,7 +1043,7 @@
                                             <h3>Transición de Flujo Analógico a Flujo Digital. Curva de Aprendizaje</h3>
                                         </div>
                                         <div class="additional-info">
-                                            <p>Conferencista: Dr. Nestor Schejtman</p>
+                                            <p class="conferencista-titulo">Conferencista: Dr. Nestor Schejtman</p>
                                             <p>Aprenderás cómo las herramientas digitales han enriquecido los protocolos
                                                 analógicos y cómo puedes hacer uso de los procesos CAD/CAM para mejorar
                                                 tu consulta diaria.</p>
@@ -1071,6 +1069,10 @@
                 </div>
 
                 <style>
+
+                    .conferencista-titulo{
+                        font-weight: bold;
+                    }
                     .agenda-list {
                         display: grid;
                         grid-template-rows: auto auto;
