--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo"">Conferencista: Dr. Manuel Lujan</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span> Dr. Manuel Lujan</p>
                                         </div>
                                     </div>
 
@@ -897,7 +897,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Heber Roberto León Salazar</p>
+                                            <p></p><span class="conferencista-titulo">Conferencista: </span>Dr. Heber Roberto León Salazar</p>
                                             <p>La unión de la estética rosa con la estética blanca es un factor
                                                 primordial para la conformación del segmento anterior. Aprende como se
                                                 complementan.</p>
@@ -928,7 +928,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Leonardo Vogel</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Leonardo Vogel</p>
                                             <p>La comunicación con tu laboratorio es la base de las restauraciones
                                                 biomimeticas, aprender a transmitir la mayor información a tu
                                                 laboratorio te dará el éxito en tu consulta diaria.</p>
@@ -958,7 +958,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Floriberto Calixto Arellanos</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Dr. Floriberto Calixto Arellanos</p>
                                             <p>Hoy en día las exigencias estéticas del paciente presentan estándares
                                                 altos, te ayudará a comprender cómo emular lo natural y aumentar la
                                                 belleza en tus restauraciones de segmento anterior.</p>
@@ -992,7 +992,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Fermin Ocañas</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Fermin Ocañas</p>
                                         </div>
                                     </div>
                                     <div data-w-id="092b5cf7-288f-355b-4821-e2dbff1fb15c" class="agenda-item">
@@ -1019,7 +1019,7 @@
                                             </div>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Cristian Reyna</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Cristian Reyna</p>
                                             <p>Los valores agregados en tu consulta aumentan la fidelidad de tus
                                                 pacientes y mejoran tus ingresos, aprende del mejor acerca de estos
                                                 temas.</p>
@@ -1048,7 +1048,7 @@
                                             <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
                                         </div>
                                         <div class="additional-info">
-                                            <p class="conferencista-titulo">Conferencista: Dr. Oscar Vizcarra</p>
+                                            <p><span class="conferencista-titulo">Conferencista: </span>Conferencista: Dr. Oscar Vizcarra</p>
                                             <p>Conocerás las herramientas necesarias del flujo digital y la integración
                                                 del mismo en la odontología del día a día, ayudándote a seleccionar
                                                 aquellas herramientas que te serán de mejor provecho y con una baja
